--- a/GlucoMan.Maui/PhysicalActivityPage.xaml
+++ b/GlucoMan.Maui/PhysicalActivityPage.xaml
@@ -48,7 +48,7 @@
                 <Button Grid.Row="0" Grid.Column="1" Text="-" x:Name="btnRemoveInjection" ></Button>
             </Grid>
 
-            <StackLayout Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" Orientation="Horizontal">
+            <HorizontalStackLayout Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2">
                 <CheckBox VerticalOptions="Center" x:Name="chkNowInAdd" IsChecked="True">
                     <CheckBox.Margin>
                         <OnPlatform x:TypeArguments="Thickness">
@@ -64,7 +64,7 @@
                         </TapGestureRecognizer>
                     </Label.GestureRecognizers>
                 </Label>
-            </StackLayout>
+            </HorizontalStackLayout>
 
             <Entry Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="4" x:Name="txtNotes" BackgroundColor="PaleGoldenrod" 
                    FontSize="Small" HorizontalTextAlignment="Start" IsReadOnly="false"/>
