--- a/GlucoMan.Maui/AlarmPage.xaml
+++ b/GlucoMan.Maui/AlarmPage.xaml
@@ -3,10 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="GlucoMan.Maui.AlarmPage">
 <ContentPage.Content>
-    <StackLayout>
+        <VerticalStackLayout>
         <Label Text="Welcome!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand"/>
-    </StackLayout>
+                VerticalOptions="Center" 
+                HorizontalOptions="Center"/>
+    </VerticalStackLayout>
     </ContentPage.Content>
 </ContentPage>
