TabbedPage substituted with signle pages; changed WeightPage funtioning.
Changed TabbedPage in InjectionsPage because it couldn't be implemented in Android. Added Pages for all pictures of body.
WeightPage restored in some of its previous links, now it is only in MealPage. added a RecipePage that links to MainPage and MealPage.

--- a/GlucoMan.Maui/FoodPage.xaml
+++ b/GlucoMan.Maui/FoodPage.xaml
@@ -16,7 +16,7 @@
             <Label Grid.Row="1" Grid.Column="0" Text="Calories [kCal]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
             <Label Grid.Row="1" Grid.Column="1" Text="Total fats %" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
             <Label Grid.Row="1" Grid.Column="2" Text="Saturated fats" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Label Grid.Row="1" Grid.Column="3" Text="Mono usat. fats" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="1" Grid.Column="3" Text="Mono u. fats" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
 
             <Entry Grid.Row="2" Grid.Column="0" x:Name="txtCalories" BackgroundColor="White"
                 Keyboard="Numeric" FontSize="Small" HorizontalTextAlignment="End" />
