--- a/GlucoMan.Maui/MainPage.xaml
+++ b/GlucoMan.Maui/MainPage.xaml
@@ -27,8 +27,8 @@
                     Margin="2" ToolTipProperties.Text="Opens a new meal page"></Button>
             <Button x:Name="btnFoods" Text="Foods" Clicked="btnFoods_Clicked" IsEnabled="True"
                     Margin="2" ToolTipProperties.Text="Opens the page for foods management"></Button>
-            <Button x:Name="btnWeighFood" Text="Weigh Food" Clicked="btnWeighFood_Clicked"
-                    Margin="2" ToolTipProperties.Text="Opens the page of food's weighing management" IsEnabled="False"/>
+            <Button x:Name="btnRecipe" Text="Recipe" Clicked="btnRecipe_Clicked"
+                    Margin="2" ToolTipProperties.Text="Opens the page of food's weighing management" IsEnabled="True"/>
             <Button x:Name="btnInsulinCalc" Text="Meal insulin" Clicked="btnInsulinCalc_Clicked"
                     Margin="2" ToolTipProperties.Text="Opens a page that calculates the quantity of insulin to inject before a meal"></Button>
             <Button x:Name="btnInjections" Text="Injections" 
