--- a/GlucoMan.Maui/InjectionsPage.xaml
+++ b/GlucoMan.Maui/InjectionsPage.xaml
@@ -1,42 +1,46 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<TabbedPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="GlucoMan.Maui.InjectionsPage"
-            Title="Insulin injections">
-    <!--Pages can be added as references or inline-->
-    <ContentPage Title="Data">
-        <Grid RowDefinitions="40,55,30,50,25,50,30,*"
+             Title="Insulin injections">
+    <ContentPage.Content>
+        <Grid RowDefinitions="40,40,55,30,50,25,50,30,*"
               ColumnDefinitions="*,*,*,*">
-            <Label Grid.Row="0" Grid.Column="0" Text="Actual insulin [U]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Label Grid.Row="0" Grid.Column="1" Text="Calculated Insulin [U]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Label Grid.Row="0" Grid.Column="2" Text="Id" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
+            <Button Grid.Row="0" Grid.Column="0" Text="Front" x:Name="btnFront" Clicked="btnFront_ClickedAsync"></Button>
+            <Button Grid.Row="0" Grid.Column="1" Text="Back" x:Name="btnBack" Clicked="btnBack_Clicked_Async"></Button>
+            <Button Grid.Row="0" Grid.Column="2" Text="Hands" x:Name="btnHands" Clicked="btnHands_ClickedAsync"></Button>
+            <Button Grid.Row="0" Grid.Column="3" Text="Sensors" x:Name="btnSensors" Clicked="btnSensors_Clicked_Async"></Button>
 
-            <Entry Grid.Row="1" Grid.Column="0" x:Name="txtInsulinActual" 
+            <Label Grid.Row="1" Grid.Column="0" Text="Actual insulin [U]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="1" Grid.Column="1" Text="Calculated Insulin [U]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="1" Grid.Column="2" Text="Id" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
+
+            <Entry Grid.Row="2" Grid.Column="0" x:Name="txtInsulinActual" 
                    Keyboard="Numeric" BackgroundColor="PaleGreen" HorizontalTextAlignment="End"
                    FontSize="Medium" />
-            <Entry Grid.Row="1" Grid.Column="1" x:Name="txtInsulinCalculated" 
+            <Entry Grid.Row="2" Grid.Column="1" x:Name="txtInsulinCalculated" 
                    Keyboard="Numeric" BackgroundColor="White" HorizontalTextAlignment="End"
                    FontSize="Medium" />
-            <Entry Grid.Row="1" Grid.Column="2" x:Name="txtIdInjection" BackgroundColor="White" 
+            <Entry Grid.Row="2" Grid.Column="2" x:Name="txtIdInjection" BackgroundColor="White" 
                        FontSize="Medium" HorizontalTextAlignment="Center" IsReadOnly="true"/>
-            <Button Grid.Row="1" Grid.Column="3" Text="Save" x:Name="btnSave" Clicked="btnSave_Click"></Button>
+            <Button Grid.Row="2" Grid.Column="3" Text="Save" x:Name="btnSave" Clicked="btnSave_Click"></Button>
 
-            <RadioButton Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="1" Content="Fast insulin" HorizontalOptions="Center"
+            <RadioButton Grid.Row="3" Grid.Column="2" Grid.ColumnSpan="1" Content="Fast insulin" HorizontalOptions="Center"
                          GroupName="groupInsulin" x:Name="rdbFastInsulin" WidthRequest="180" />
-            <RadioButton Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="1" Content="Slow insulin" HorizontalOptions="Center"
+            <RadioButton Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="1" Content="Slow insulin" HorizontalOptions="Center"
                          GroupName="groupInsulin" x:Name="rdbSlowInsulin" WidthRequest="180"/>
 
-            <Label Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Text="Injection date and time"  
+            <Label Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Text="Injection date and time"  
                    HorizontalTextAlignment="Start" VerticalTextAlignment="Center"/>
 
-            <DatePicker Grid.Row="3" Grid.Column="0" x:Name="dtpInjectionDate" 
+            <DatePicker Grid.Row="4" Grid.Column="0" x:Name="dtpInjectionDate" 
                         BackgroundColor="PaleGreen" FontSize="Small" Format="yyyy-MM-dd" 
                         HorizontalOptions="Center" />
-            <TimePicker Grid.Row="3" Grid.Column="1" x:Name="dtpInjectionTime" 
+            <TimePicker Grid.Row="4" Grid.Column="1" x:Name="dtpInjectionTime" 
                         BackgroundColor="PaleGreen" FontSize="Small" Format="HH:mm:ss" 
                         HorizontalOptions="Center" />
-            <Button Grid.Row="3" Grid.Column="2" Text="Now" x:Name="btnNow" Clicked="btnNow_Click"></Button>
-            <Grid Grid.Row="3" Grid.Column="3">
+            <Button Grid.Row="4" Grid.Column="2" Text="Now" x:Name="btnNow" Clicked="btnNow_Click"></Button>
+            <Grid Grid.Row="4" Grid.Column="3">
                 <Grid.RowDefinitions>
                     <RowDefinition />
                 </Grid.RowDefinitions>
@@ -48,7 +52,7 @@
                 <Button Grid.Row="0" Grid.Column="1" Text="-" x:Name="btnRemoveInjection" Clicked="btnRemoveInjection_Click"></Button>
             </Grid>
 
-            <HorizontalStackLayout Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2">
+            <HorizontalStackLayout Grid.Row="54" Grid.Column="1" Grid.ColumnSpan="2">
                 <CheckBox VerticalOptions="Start" x:Name="chkNowInAdd" IsChecked="True">
                     <CheckBox.Margin>
                         <OnPlatform x:TypeArguments="Thickness">
@@ -66,13 +70,13 @@
                 </Label>
             </HorizontalStackLayout>
 
-            <Entry Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="4" x:Name="txtNotes" BackgroundColor="White" 
+            <Entry Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="4" x:Name="txtNotes" BackgroundColor="White" 
                    FontSize="Small" HorizontalTextAlignment="Start" IsReadOnly="false"/>
 
-            <Label Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" Text="Time" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Label Grid.Row="6" Grid.Column="2" Grid.ColumnSpan="2" Text="Insulin Units [U]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" Text="Time" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="7" Grid.Column="2" Grid.ColumnSpan="2" Text="Insulin Units [U]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
 
-            <ListView Grid.Row="7" Grid.ColumnSpan="4" x:Name="gridInjections" ItemsSource="{Binding}"
+            <ListView Grid.Row="8" Grid.ColumnSpan="4" x:Name="gridInjections" ItemsSource="{Binding}"
                       ItemSelected="OnGridSelectionAsync" >
                 <!-- description of data to be shown, in a DataTemplate -->
                 <ListView.ItemTemplate>
@@ -96,34 +100,5 @@
                 </ListView.ItemTemplate>
             </ListView>
         </Grid>
-    </ContentPage>
-    <ContentPage Title="Front">
-        <VerticalStackLayout>
-            <HorizontalStackLayout HeightRequest="40">
-            </HorizontalStackLayout>
-            <Image Source="busto_fronte.png" Scale="1"/>
-        </VerticalStackLayout>
-    </ContentPage>
-    <ContentPage Title="Back">
-        <VerticalStackLayout>
-            <HorizontalStackLayout HeightRequest="40">
-            </HorizontalStackLayout>
-            <Image Source="busto_retro.png" Scale="1"/>
-        </VerticalStackLayout>
-    </ContentPage>
-    <ContentPage Title="Hand">
-        <VerticalStackLayout>
-            <HorizontalStackLayout HeightRequest="40">
-            </HorizontalStackLayout>
-            <Image Source="mano_destra.png" Scale="1"/>
-            <Image Source="mano_sinistra.png" Scale="1"/>
-    </VerticalStackLayout>
-    </ContentPage>
-    <ContentPage Title="Sensor">
-        <VerticalStackLayout>
-            <HorizontalStackLayout HeightRequest="40">
-            </HorizontalStackLayout>
-            <Image Source="braccia_retro.png" Aspect="Center" Scale="1"/>
-        </VerticalStackLayout>
-    </ContentPage>
-</TabbedPage>
+    </ContentPage.Content>
+</ContentPage>
