--- a/GlucoMan.Maui/BackPicturePage.xaml
+++ b/GlucoMan.Maui/BackPicturePage.xaml
@@ -6,6 +6,12 @@
     <VerticalStackLayout>
         <HorizontalStackLayout HeightRequest="40">
         </HorizontalStackLayout>
-        <Image Source="busto_retro.png" Scale="1"/>
+        <Image Source="busto_retro.png" Scale="1"        
+               HeightRequest="600"
+               HorizontalOptions="Center">
+            <Image.GestureRecognizers>
+                <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" />
+            </Image.GestureRecognizers>
+        </Image>
     </VerticalStackLayout>
 </ContentPage>
