--- a/GlucoMan.Maui/BackPicturePage.xaml
+++ b/GlucoMan.Maui/BackPicturePage.xaml
@@ -1,17 +1,43 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:drawable="clr-namespace:GlucoMan.Maui"
              x:Class="GlucoMan.Maui.BackPicturePage"
              Title="Back past injections">
+    <!-- fra le risprse della pagina aggiungiamo una risorsa di nome "drawable"
+         di tipo CerchioDrawable, accessibile tramite la chiave "cerchioDrawable" (per il binding) -->
+    <ContentPage.Resources>
+        <drawable:CirclesDrawable x:Key="cerchioDrawable" />
+    </ContentPage.Resources>
     <VerticalStackLayout>
         <HorizontalStackLayout HeightRequest="40">
         </HorizontalStackLayout>
-        <Image Source="busto_retro.png" Scale="1"        
-               HeightRequest="600"
-               HorizontalOptions="Center">
-            <Image.GestureRecognizers>
-                <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" />
-            </Image.GestureRecognizers>
-        </Image>
+        <Grid>
+            <!-- griglia in cui metto un'immagine ed un GraphicsView nella stessa cella 
+                 (così si sovrappongo. L'immagine sta sotto ed il GraphicsView sopra
+                  (così si vedono i cerchi che vengono disegnati)) -->
+            <Image x:Name="Immagine" Source="busto_retro.png" Scale="1"        
+                   HeightRequest="600"
+                   WidthRequest="400"
+                   VerticalOptions="Start"
+                   HorizontalOptions="Center">
+            </Image>
+            <!-- si definisce un GraphicsView che ha le stesse dimensioni della Image 
+                 e che è collegato (bound) con i "dati" provenienti dalla risorsa chiamata 
+                 "drawable" (definita prima) -->
+            <GraphicsView x:Name="cerchiGraphicsView"
+                    Drawable="{StaticResource drawable}"
+                    HeightRequest="600"
+                    WidthRequest="400"
+                    VerticalOptions="Start"
+                    HorizontalOptions="Center">
+                <!-- aggiunge un "riconoscitore di "tap" che lancia un evento quando l'utente 
+                     clicca (col mouse) o "tappa" (col dito) sul GraphicsView. 
+                     L'evento forzerà una riscrittura della GraphicsView -->
+                <GraphicsView.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" />
+                </GraphicsView.GestureRecognizers>
+            </GraphicsView>
+        </Grid>
     </VerticalStackLayout>
 </ContentPage>
