Added and integrated objects and a minimum code for Recipes management
Added classes Recipe.cs and RecipeIngredient
Added pages RecipesPage and RecipePage
Added stub of DataLayer for Recipes in file SqLite_Recipes.cs (currently the fields are not present in the database file), added file BL_Recipes.cs of Business Layer.
Some minor name refactorings on Alarms part (currently not finished)
Cured a datase access errore in SqLite_MealAndFood.cs

--- a/GlucoMan.Maui/MainPage.xaml
+++ b/GlucoMan.Maui/MainPage.xaml
@@ -27,7 +27,7 @@
                     Margin="2" ToolTipProperties.Text="Opens a new meal page"></Button>
             <Button x:Name="btnFoods" Text="Foods" Clicked="btnFoods_Clicked" IsEnabled="True"
                     Margin="2" ToolTipProperties.Text="Opens the page for foods management"></Button>
-            <Button x:Name="btnRecipe" Text="Recipe" Clicked="btnRecipe_Clicked"
+            <Button x:Name="btnRecipes" Text="Recipes" Clicked="btnRecipes_Clicked"
                     Margin="2" ToolTipProperties.Text="Opens the page of food's weighing management" IsEnabled="True"/>
             <Button x:Name="btnInsulinCalc" Text="Meal insulin" Clicked="btnInsulinCalc_Clicked"
                     Margin="2" ToolTipProperties.Text="Opens a page that calculates the quantity of insulin to inject before a meal"></Button>
