Added the work from Daniele Pieri about clicking on image position
It works, but needs to be integrated with program's data and refined in the user's interactions.
Modification of existing reference point is not present in code (TODO).
BackPicturePage and FrontPicturePage: added in the UI the buttons to save points entered by the user.
BackPicturePage: added code that manages button click in Edit and non Edit state.
FrontPicturePage: added some prototipical code to do the same (not working!)
CirclesDrawable: added code to added code to save and read the points in-from flat file.

--- a/GlucoMan.Maui/BackPicturePage.xaml
+++ b/GlucoMan.Maui/BackPicturePage.xaml
@@ -11,6 +11,14 @@
     </ContentPage.Resources>
     <VerticalStackLayout>
         <HorizontalStackLayout HeightRequest="40">
+            <CheckBox x:Name="EditorCheckBox"  CheckedChanged="Is_Checked" />
+            <Label VerticalTextAlignment="Center">Editor</Label>
+
+            <Button x:Name="ButtonSave" Text="SaveRed" Clicked="SaveCircleToFile" />
+            <Button x:Name="ButtonSave2" Text="SaveBlu" Clicked="SaveCircleToFileBlu" />
+
+            <Button x:Name="ButtonClear" Text="Clear" Clicked="ClearFile" />
+
         </HorizontalStackLayout>
         <Grid>
             <!-- griglia in cui metto un'immagine ed un GraphicsView nella stessa cella 
