--- a/GlucoMan.Maui/SensorsPicturePage.xaml
+++ b/GlucoMan.Maui/SensorsPicturePage.xaml
@@ -1,17 +1,42 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:drawable="clr-namespace:GlucoMan.Maui"
              x:Class="GlucoMan.Maui.SensorsPicturePage"
              Title="Sensors' previous positions">
+    <ContentPage.Resources>
+        <drawable:CirclesDrawable x:Key="cerchioDrawable" />
+    </ContentPage.Resources>
     <VerticalStackLayout>
-        <HorizontalStackLayout HeightRequest="40">
+        <HorizontalStackLayout x:Name="stackEditingOptions" HeightRequest="40">
+            <CheckBox x:Name="EditorCheckBox" CheckedChanged="CheckedChanged"/>
+            <Label VerticalTextAlignment="Center" HorizontalTextAlignment="Start">Editing</Label>
+            <CheckBox x:Name="DeleteCheckBox"/>
+            <Label VerticalTextAlignment="Center" HorizontalTextAlignment="Start">Delete points</Label>
+            <Button x:Name="btnSave" Text="Save points" Clicked="btnSave_Click" />
+            <Button x:Name="btnClear" Text="Clear" Clicked="btnClear_Click" />
         </HorizontalStackLayout>
-        <Image Source="braccia_retro.png" Aspect="Center" Scale="1"
-               HeightRequest="300"
-               WidthRequest="900">
-            <Image.GestureRecognizers>
-                <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" />
-            </Image.GestureRecognizers>
-        </Image>
+        <Grid>
+            <Image Source="braccia_retro.png" Aspect="Center" Scale="1"
+                   Margin="0,180"
+                HeightRequest="180"
+                WidthRequest="450"
+                VerticalOptions="Start"
+                HorizontalOptions="Center">
+            </Image>
+            <GraphicsView x:Name="cerchiGraphicsView"
+                    Drawable="{StaticResource drawable}"
+                    HeightRequest="360"
+                    WidthRequest="450"
+                    VerticalOptions="Start"
+                    HorizontalOptions="Center">
+                <!-- aggiunge un "riconoscitore di "tap" che lancia un evento quando l'utente 
+                     "clicca" (col mouse) o "tappa" (col dito) sul GraphicsView. 
+                     L'evento forzerà una riscrittura della GraphicsView -->
+                <GraphicsView.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
+                </GraphicsView.GestureRecognizers>
+            </GraphicsView>
+        </Grid>
     </VerticalStackLayout>
 </ContentPage>
